# python-dependabot-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_clean.py  test_fetch.py  test_plot.py  test_shipping.py
